ajout du message de confirmation

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -43,6 +43,7 @@
           <button class="btn-signup modal-btn">
             je m'inscris
           </button>
+          <div id="confirmationMessage" style="display: none ; font-size: 0.7em;">Merci, votre réservation a été reçue !</div>
         </div>
         <div class="hero-img">
           <img src="./bg_img.jpg" alt="img" />
