test des valeurs correctes et incorrectes ok

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -97,6 +97,9 @@
                   id="email"
                   name="email"
                 /><br>
+                <div id="error-element-mail" class ="error-message" style="color:red ; font-size: 0.6em ; display: none;">
+                  L'adresse mail n'est pas valide.
+                </div>
               </div>
               <div
                 class="formData">
