correction de nouveux bugs d'affichage responsive

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -15,8 +15,8 @@
     <div class="topnav" id="myTopnav">
       <div class="header-logo">
       <img alt="logo" src="Logo.png" width="auto" height="auto" />
-    </div>
-    <div class="main-navbar">
+      </div>
+      <div class="main-navbar">
       
       <a href="#" class="active"><span>Accueil</span></a>
       <a href="#"><span>Détails de l'évènement</span></a>
@@ -26,8 +26,11 @@
       <a href="javascript:void(0);" class="icon" onclick="editNav()">
         <i class="fa fa-bars"></i>
       </a>
+      </div>
     </div>
-    </div>
+  </div>
+  <div class="confirmationBlock">
+  <div id="confirmationMessage" style="display: none ; font-size: 0.9em;">Merci, votre réservation a été reçue !</div>
   </div>
     <main>
       <div class="hero-section">
@@ -43,7 +46,6 @@
           <button class="btn-signup modal-btn">
             je m'inscris
           </button>
-          <div id="confirmationMessage" style="display: none ; font-size: 0.7em;">Merci, votre réservation a été reçue !</div>
         </div>
         <div class="hero-img">
           <img src="./bg_img.jpg" alt="img" />
