modification sur le message de confirmation

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -29,9 +29,6 @@
       </div>
     </div>
   </div>
-  <div class="confirmationBlock">
-  <div id="confirmationMessage" style="display: none ; font-size: 0.9em;">Merci, votre réservation a été reçue !</div>
-  </div>
     <main>
       <div class="hero-section">
         <div class="hero-content">
@@ -57,6 +54,9 @@
 
       <div class="bground">
         <div class="content">
+          <div class="confirmationBlock">
+            <div class="confirmationMessage" style="display: none ; font-size: 0.9em;">Merci pour votre inscription</div>
+          </div>
           <span class="close"></span>
           <div class="modal-body">
             <form
