ajout du bouton fermer dans le block de message de confirmation

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -56,6 +56,9 @@
         <div class="content">
           <div class="confirmationBlock">
             <div class="confirmationMessage" style="display: none ; font-size: 0.9em;">Merci pour votre inscription</div>
+            <button class="closeConfirmation" style="display: none;">
+              Fermer
+            </button>
           </div>
           <span class="close"></span>
           <div class="modal-body">
